# signum-job-intelligence

./: .env.example  .gitignore  Caddyfile  FINDING.md  Makefile  PRODUCTION_AUDIT.md  README.md  REPORT.md  docker-compose.yml  run.ps1
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_hypertable_events.py  003_provenance.py  004_add_pipeline_runs.py
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: deps.py  errors.py  middleware.py
backend/app/api/v1/: emerging.py  extract.py  graph.py  health.py  ingest.py  metrics.py  pipeline.py  search.py  signals.py  taxonomy.py  trends.py
backend/app/core/: config.py  logging.py
backend/app/infrastructure/: signals.py
backend/app/infrastructure/cache/: redis.py
backend/app/infrastructure/database/: models.py  session.py
backend/app/infrastructure/extraction/: extractor.py
backend/app/infrastructure/indexing/: bitmap.py
backend/app/infrastructure/ingestion/: common.py  pipeline.py  sources.py
backend/app/scripts/: reset_and_reingest.py  seed_taxonomy.py
backend/app/static/: index.html
backend/app/static/graph/: index.html
backend/scripts/: benchmark.py  verify_pipeline.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: test_api_flows.py
backend/tests/unit/: test_bitmap.py  test_extractor.py  test_signals.py
docs/: ADR.md  ARCHITECTURE.md  benchmark.md  benchmark_results.md
